Ajout hyperline vers American Magic

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 		<li> New York Yacht Club American Magic </li>
 		<li> <a href="./challenger/luna_rossa.html" title="Accès sécurisé au challenger Luna Rossa"> Luna Rossa Challenge </a></li>
 		<li> Stars & Stripes Team USA </li>
+		<li> <a href="./challenger/american_magic.html" title="Acces sécurisé au challenger American Magic"> American Magic </a> </li>
 	</ul>
   </section>
     
